fix popup background not covering entire screen

--- a/src/styles/components/_popup-box.scss
+++ b/src/styles/components/_popup-box.scss
@@ -7,10 +7,6 @@
     flex-direction: column;
     gap: 1.5rem;
     padding: 2rem 4rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 
     > div {
         display: flex;
@@ -20,6 +16,7 @@
 }
 
 body.popup {
+    position: relative;
 
     &::before {
         content: '';
@@ -27,13 +24,17 @@ body.popup {
         top: 0;
         left: 0;
         background-color: var(--dark-opaque);
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         z-index: 1;
     }
 
     .popup-box {
         @include center-content;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         z-index: 2;
     }
 }
